# speech2text

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backup/: Dockerfile
backup/src/speech2text/: download_models.py  main.py
src/speech2text/: main.py  utils.py
