[project]
dependencies = [
  "httplib2>=0.22.0",
  "huggingface-hub>=0.30.1",
  "librosa>=0.11.0",
  "numpy>=2.1.3",
  "pyannote-audio>=3.3.2",
  "pyannote-core>=5.0.0",
  "pydub>=0.25.1",
  "sentencepiece>=0.2.0",
  "streamlit>=1.44.0",
  "tokenizers>=0.21.1",
  "torchaudio>=2.6.0",
  "transformers>=4.50.3",
  "watchdog>=6.0.0",
  "youtube-dl>=2021.12.17"
]
description = "Add your description here"
name = "speech2text"
requires-python = ">=3.11"
version = "0.1.0"
